--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
     "react": "^18.2.0",
