--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "sweetalert2": "^11.10.6"
   },
