--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.3",
+    "jspdf": "^2.5.1",
     "mysql2": "^3.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
